--- a/ComputerVisionFundamentals/Lane Line Detection V 5.0.ipynb
+++ b/ComputerVisionFundamentals/Lane Line Detection V 5.0.ipynb
@@ -79,15 +79,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-da5495e55902>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-da5495e55902>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    %timeit white_clip.write_videofile(white_output, audio=False)\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "t:   0%|                                                                             | 0/125 [00:00<?, ?it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video test_videos_output/solidWhiteRight.mp4.\n",
+      "Moviepy - Writing video test_videos_output/solidWhiteRight.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/solidWhiteRight.mp4\n",
+      "Wall time: 3.62 s\n"
      ]
     }
    ],
@@ -97,17 +122,34 @@
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
     "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
-    "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
-    "white_clip = clip1.fl_image(process(image) #NOTE: this function expects color images!!\n",
-    "%timeit white_clip.write_videofile(white_output, audio=False)"
+    "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
+    "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
+    "white_clip = clip1.fl_image(process) #NOTE: this function expects color images!!\n",
+    "%time white_clip.write_videofile(white_output, audio=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidWhiteRight.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
